# Scanner

./: CMakeLists.txt  README.md
libscanner/: CMakeLists.txt
libscanner/include/: Hasher.hpp
libscanner/include/scanner/: Hasher.hpp  Logger.hpp  Scanner.hpp  Store.hpp  Types.hpp
libscanner/include/scanner/detail/: BoundedQueue.hpp  Producer.hpp  Worker.hpp
libscanner/src/: Hasher.cpp  Logger.cpp  Scanner.cpp  Store.cpp
libscanner/src/detail/: Producer.cpp  Worker.cpp
scanner_cli/: CMakeLists.txt
scanner_cli/include/cli/: App.hpp  Options.hpp  Parser.hpp
scanner_cli/src/: App.cpp  Parser.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: HasherLargeFileTest.cpp  HasherTests.cpp  ScannerLoggerTests.cpp  StoreTests.cpp  TestUtils.hpp
